Assets: Fixed CSS url rewriting

--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -34,6 +34,6 @@
 {% endif %}
 <script type="text/javascript">
     var Mapbender = Mapbender || {};
-    Mapbender.configuration = {{ application.configuration.dump | raw }}</script>
+    Mapbender.configuration = {{ application.configuration | raw }}</script>
 {% endblock %}
 
