--- a/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
@@ -27,4 +27,41 @@
     </footer>
 </form>
 
+<div id="repository-list-modal"  class="modal hide fade">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3>{{ "Select Source"|trans }}</h3>
+    </div>
+    <div class="modal-body">
+        <table class="table table-striped" id="repository-list">
+            <thead>
+                <tr>
+                    <th>{{ 'Type' | trans }}</th>
+                    <th>{{ 'Title' | trans }}</th>
+                    <th>{{ 'Alias' | trans }}</th>
+                    <th>{{ 'Description' | trans }}</th>
+                    <th>{{ 'Actions' | trans }}</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for source in sources %}
+                <tr data-source-id="{{ source.id }}">
+                    <td>{{ source.type }}</td>
+                    <td>{{ source.title }}</td>
+                    <td>{{ source.alias }}</td>
+                    <td>{{ source.description }}</td>
+                    <td>
+                        <div class="entity-actions btn-group">
+                            <form method="post" class="action-add" action="{{ url("mapbender_manager_application_addlayerset",{"slug":application.slug} ) }}" title="{{ 'Add' | trans }}" >
+                                <input type="hidden" name="sourceId" value="{{ source.id }}" />
+                                <input class="btn" type="submit" value="{{ 'Add' | trans }}" />
+                            </form>
+                        </div>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
 {% endblock %}
