Delete layer from layerset

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-edit.html.twig
@@ -9,7 +9,7 @@ Required fields are marked with dark labels, while optional fields have lighter 
 <ul class="nav nav-tabs">
     <li class="active"><a href="#application-basics" data-toggle="tab">{{ 'Base data' | trans}}</a></li>
     <li><a href="#application-elements" data-toggle="tab">{{ 'Elements' | trans}}</a></li>
-    <li><a href="#application-layersets" data-toggle="tab">{{ 'Layersets' | trans}}</a></li>
+    <li><a href="#application-layersets" data-toggle="tab">{{ 'Layers' | trans}}</a></li>
     <li><a href="#application-security" data-toggle="tab">{{ 'Security' | trans}}</a></li>
 </ul>
 
