--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
@@ -10,12 +10,19 @@
                     <th>{{ 'Actions' | trans }}</th>
                 </tr>
             </thead>
-            <tbody id="{{layerset.id }}" >
+            <tbody>
                 {% for layer in layerset.layers %}
                     <tr data-source-id="{{ layer.id }}">
                         <td>{{ layer.title }}</td>
                         <td>
                             <div class="entity-actions btn-group">
+                                <a 
+                                    class="btn btn-warning" 
+                                    href="{{ url("mapbender_manager_application_confirmlayerdelete",{
+                                        "slug": application.slug,
+                                        "layerId": layer.id
+                                    })  }}"
+                                >Delete</a>
                             </div>
                         </td>
                     </tr>
