--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.template.fullscreen.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.template.fullscreen.css
@@ -22,3 +22,11 @@ html, body {
 .olControlPanZoomBar {
     top: 40px!important
 }
+
+.ie7 .mb-element-map {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
