add new tooltip configuration

--- a/src/Mapbender/CoreBundle/Resources/views/Element/legend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/legend.html.twig
@@ -1,2 +1,2 @@
-<span id="{{ id }}" class="mb-element mb-element-legend">{{'Legend'|trans }}</span>
+<a title="{{ configuration.tooltip|default("Legend") }}" id="{{ id }}" class="mb-element mb-element-legend">{{'Legend'|trans }}</a>
 <div id="{{ id }}-dialog" class="mb-element-legend-dialog"> </div>
