--- a/src/Mapbender/CoreBundle/Resources/views/Element/about_dialog.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/about_dialog.html.twig
@@ -1,1 +1,1 @@
-<a class="mb-element mb-element-about-dialog-button" id="{{ id }}">{{ "About"|trans }}</a>
+<a title="{{ configuration.tooltip|default("About") }}" class="mb-element mb-element-about-dialog-button" id="{{ id }}">{{ "About"|trans }}</a>
