Fixes for DB-based applications

--- a/src/Mapbender/CoreBundle/Resources/views/Welcome/list.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Welcome/list.html.twig
@@ -2,6 +2,8 @@
 
 {% set placeholder = asset('bundles/mapbendercore/image/placeholder_map.png') %}
 
+{% block title %}Applications{% endblock %}
+
 {% block manager_content %}
 <ul class="thumbnails">
 {% for application in applications %}
