--- a/src/Mapbender/CoreBundle/Resources/views/frontend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/frontend.html.twig
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <![endif]-->
     <title>{% block title %}{% endblock %} - {{ fom.server_name }}</title>
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
 {% block head %}{% endblock %}
 
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/reset.css') }}" />
