elements changed, srs added

--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.elements.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.elements.css
@@ -128,7 +128,8 @@ body.mb-activity .mb-element-activityindicator {
 
 .mb-element-coordsdisplay-div {
     position:relative;
-    width: 180px
+    width: 180px;
+    height: 20px;
 }
 
 .mb-element-srsselector-div {
