--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.template.fullscreen.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.template.fullscreen.css
@@ -19,6 +19,15 @@ html, body {
     z-index: 1;
 }
 
+.region#footer {
+    position: absolute;
+/*    top: 0;
+    right: 0;*/
+    bottom: 0;
+    left: 0;
+    z-index: 2;
+}
+
 .olControlPanZoomBar {
     top: 40px!important
 }
