--- a/src/Mapbender/CoreBundle/Resources/views/Element/scaleselector.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/scaleselector.html.twig
@@ -1,6 +1,6 @@
 <div id="{{ id }}-div" class="mb-element mb-element-scaleselector-div">
 {% if configuration.title is defined and configuration.title != '' %}
-    <label for="{{ id }}">{{ configuration.title|trans }} 1:</label>
+    <label for="{{ id }}">{{ title|trans }} 1:</label>
 {% endif %}
-    <select id="{{ id }}" class="mb-element mb-element-scaleselector"></select>
+    <select id="{{ id }}" class="mb-element mb-element-scaleselector" title="{{ configuration.tooltip|default(title)|trans }}"></select>
 </div>
