--- a/src/Mapbender/CoreBundle/Resources/views/Element/button.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/button.html.twig
@@ -1,5 +1,5 @@
 {% if configuration.group is defined %}
-<label for="{{ id }}">{{ label }}</label><input class="mb-element mb-element-button" type="checkbox" name="mb-button-group[{{ configuration.group }}]" value="{{ id }}" id="{{ id }}"/>
+<label for="{{ id }}" title="{{ configuration.tooltip|default(title)|trans }}">{{ title|trans }}</label><input class="mb-element mb-element-button" type="checkbox" name="mb-button-group[{{ configuration.group }}]" value="{{ id }}" id="{{ id }}"/>
 {% else %}
-<a href="#" title="{{ configuration.tooltip|default(label) }}" class="mb-element mb-element-button" id="{{ id }}">{{ label }}</a>
+<a href="#" title="{{ configuration.tooltip|default(title)|trans }}" class="mb-element mb-element-button" id="{{ id }}">{{ title|trans }}</a>
 {% endif %}
