--- a/src/Mapbender/CoreBundle/Resources/views/Element/copyright.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/copyright.html.twig
@@ -1,5 +1,5 @@
-<div id="{{ id }}" class="mb-element mb-element-copyright">
-    <span class="span-copyright">{{ configuration.copyrigh_text |trans |raw }}</span>
+<div id="{{ id }}" class="mb-element mb-element-copyright"  title="{{ configuration.tooltip|default(title)|trans }}">
+    <span class="span-copyright" title="">{{ configuration.copyrigh_text |trans |raw }}</span>
     {% if configuration.dialog_link is defined %}
     <br/>
     <span id="{{ id }}-link" class="mb-element-copyright-link">{{ configuration.dialog_link |trans |raw }}</span>
