--- a/src/Mapbender/CoreBundle/Resources/views/Element/toc.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/toc.html.twig
@@ -1,3 +1,3 @@
-<div id="{{ id }}" class="mb-element mb-element-toc" title="{{ "Services"|trans }}">
+<div id="{{ id }}" class="mb-element mb-element-toc" title="{{ configuration.tooltip|default(title)|trans }}">
     <div id="services"></div>
 </div>
