--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.template.base2.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.template.base2.css
@@ -110,17 +110,17 @@ a, a:visited {
   width: 700px;
   border-top: 1px solid #a2c515;
 }
-.footer .mb-element-srsselector-div {
+.footer .mb-element-srsselector {
   position: absolute;
   top: 5px;
   right: 0;
 }
-.footer .mb-element-srsselector-div select {
+.footer .mb-element-srsselector select {
   width: 100%;
   border: 1px solid #cccccc;
   color: #3f3f3f;
 }
-.footer .mb-element-coordsdisplay-div {
+.footer .mb-element-coordsdisplay {
   position: absolute;
   left: 0;
   top: 8px;
