--- a/src/Mapbender/CoreBundle/Resources/views/Element/measure_dialog.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/measure_dialog.html.twig
@@ -1,2 +1,2 @@
-<div class="mb-element mb-element-{{ type }}ruler" id="{{ id }}" title="{{ configuration.tooltip|default(title)|trans }}"></div>
+<div class="mb-element mb-element-{{ configuration.type }}ruler" id="{{ id }}" title="{{ configuration.tooltip|default(title)|trans }}"></div>
 
