--- a/src/Mapbender/CoreBundle/Resources/views/Element/srsselector.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/srsselector.html.twig
@@ -1,6 +1,6 @@
-<div id="{{ id }}-div" class="mb-element mb-element-srsselector-div">
-{% if configuration.title is defined and configuration.title != '' %}
-    <label for="{{ id }}">{{ title|trans }}:</label>
+<div id="{{ id }}" class="mb-element mb-element-srsselector">
+{% if configuration.title is defined %}
+    <label for="{{ id }}-srs">{{ title|trans }}:</label>
 {% endif %}
-    <select id="{{ id }}" class="mb-element mb-element-srsselector" title="{{ configuration.tooltip|default(title)|trans }}"></select>
+    <select id="{{ id }}-srs" title="{{ configuration.tooltip|default(title)|trans }}"></select>
 </div>
